--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Homework 10</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   </head>
   <body>
-    <input type="text" id="search-box" />
-    <ul class="country-list"></ul>
-    <div class="country-info"></div>
+    <div class="background-form">
+<form class="search-form" id="search-form">
+  <input type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." />
+  <button type="submit"></button>
+</form>
+    </div>
+      <ul class="image-info">
+        <!-- <li><div class="image-box">
+          <img src="https://klike.net/uploads/posts/2019-05/1556708032_1.jpg" alt="" width="400px" height="300px">
+          <ul class="about-img">
+          <li class="name-numbers">Likes
+            <p class="number">100</p>
+          </li>
+          <li class="name-numbers">Views <p class="number">
+            200
+          </p></li>
+          <li class="name-numbers">Comments <p class="number">
+            300
+          </p></li>
+          <li class="name-numbers">Downloads <p class="number">400</p></li>
+        </ul>
+        </div></li> -->
+      </ul>
 
     <script src="index.js"></script>
   </body>
 </html>
+
