--- a/src/index.html
+++ b/src/index.html
@@ -11,26 +11,19 @@
     <div class="background-form">
 <form class="search-form" id="search-form">
   <input type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." />
-  <button type="submit"></button>
+  <button class="submit-btn" type="submit"></button>
 </form>
     </div>
-      <ul class="image-info">
-        <!-- <li><div class="image-box">
-          <img src="https://klike.net/uploads/posts/2019-05/1556708032_1.jpg" alt="" width="400px" height="300px">
-          <ul class="about-img">
-          <li class="name-numbers">Likes
-            <p class="number">100</p>
-          </li>
-          <li class="name-numbers">Views <p class="number">
-            200
-          </p></li>
-          <li class="name-numbers">Comments <p class="number">
-            300
-          </p></li>
-          <li class="name-numbers">Downloads <p class="number">400</p></li>
-        </ul>
-        </div></li> -->
-      </ul>
+    <div class="gallery">
+      <ul class="image-info"></ul>
+      <div class="loader"></div>
+    <!-- <div class="loading">
+      <div class="ball"></div>
+      <div class="ball"></div>
+      <div class="ball"></div>
+    </div> -->
+    </div>
+     
 
     <script src="index.js"></script>
   </body>
